--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -20,7 +20,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Question 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31,10 +33,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Article HTML saved to article_content.pkl\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from bs4 import BeautifulSoup\n",
+    "import pickle\n",
+    "\n",
+    "# Define the URL to fetch the article HTML from\n",
+    "url = \"https://web.archive.org/web/20210327165005/https://hackaday.com/2021/03/22/how-laser-headlights-work/\"\n",
+    "\n",
+    "# Send a GET request to fetch the page content\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "# Check if the request was successful\n",
+    "if response.status_code == 200:\n",
+    "    # Parse the HTML content with BeautifulSoup\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    \n",
+    "    # Extract the article's HTML content (you can target specific parts of the page if needed)\n",
+    "    article_html = soup.prettify()  # This gives the entire HTML structure in a readable format\n",
+    "\n",
+    "    # Define the filename to save the pickle\n",
+    "    output_filename = \"article_content.pkl\"\n",
+    "\n",
+    "    # Save the HTML to a .pkl file using pickle\n",
+    "    with open(output_filename, 'wb') as f:\n",
+    "        pickle.dump(article_html, f)\n",
+    "    \n",
+    "    print(f\"Article HTML saved to {output_filename}\")\n",
+    "else:\n",
+    "    print(f\"Failed to retrieve the webpage. Status code: {response.status_code}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,7 +173,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +187,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
