--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -79,14 +79,260 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Read in your article's html source from the file you created in question 1 and print it's text (use `.get_text()`)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "         How Laser Headlights Work\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "          130 Comments\n",
+      "         \n",
+      "\n",
+      "\n",
+      "           by:\n",
+      "          \n",
+      "\n",
+      "\n",
+      "            Lewin Day\n",
+      "           \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "           March 22, 2021\n",
+      "          \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "         When we think about the onward march of automotive technology, headlights aren’t usually the first thing that come to mind. Engines, fuel efficiency, and the switch to electric power are all more front of mind. However, that doesn’t mean there aren’t thousands of engineers around the world working to improve the state of the art in automotive lighting day in, day out.\n",
+      "        \n",
+      "\n",
+      "         Sealed beam headlights gave way to more modern designs once regulations loosened up, while bulbs moved from simple halogens to xenon HIDs and, more recently, LEDs. Now, a new technology is on the scene, with lasers!\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "         Laser Headlights?!\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "           BWM’s prototype laser headlight assemblies undergoing testing.\n",
+      "          \n",
+      "\n",
+      "\n",
+      "         The first image brought to mind by the phrase “laser headlights” is that of laser beams firing out the front of an automobile. Obviously, coherent beams of monochromatic light would make for poor illumination outside of a very specific spot quite some distance away. Thankfully for our eyes, laser headlights don’t work in this way at all.\n",
+      "        \n",
+      "\n",
+      "         Instead, laser headlights consist of one or more solid state laser diodes mounted inside the headlight. These blue lasers are fired at a yellow phosphor, similar to that used in white LEDs. This produces a powerful, vibrant white light that can then be bounced off reflectors and out of the headlights towards the road. Laser headlights built in this way have several benefits. They’re more energy efficient than LEDs that put out the same amount of light, while also being more space efficient, too.\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "           BWM’s futuristic i8 was one of the first vehicles to ship with laser headlight technology.\n",
+      "          \n",
+      "\n",
+      "\n",
+      "         Laser headlights are still a nascent technology, thus far only appearing in a few BMW, Audi, and other select vehicles.\n",
+      "         \n",
+      "          BMW’s technology was developed in partnership with lighting experts OSRAM\n",
+      "         \n",
+      "         . In practice, a regular LED low-beam lamp is used, with the laser used to create an incredibly bright and focused spot, used for high-beams. This can provide illumination out to 600 meters ahead of the vehicle, double that of conventional LED high beams. The lights use indium gallium nitride diode lasers that were originally used in projectors, with power levels above 1 watt. One of the challenges in implementing such technology in an automotive environment is the need for it to operate at temperature extremes. While research lasers and laser pointers may primarily be used at typical room temperatures, automotive headlights must be able to withstand everything from 40 degrees below zero up to 50 degrees C. Thankfully, the laser’s high efficiency means it doesn’t have huge heat output of its own to further complicate things. Other engineering challenges involve tailoring the optics package for the rough-and-tumble, high vibration environment found in the automotive application. It’s also important to ensure, as with any such device, that the end user can’t be exposed to harmful laser radiation in the event of accident or malfunction.\n",
+      "        \n",
+      "\n",
+      "         Tearing Down the Laser Headlight\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "          A marketing image showing the construction of an aftermarket LED/laser headlight. We’d take the laser power with a grain of salt — it’s difficult to imagine a 10 W laser shining directly on some small LEDs without melting a hole through the board in short order.\n",
+      "         \n",
+      "\n",
+      "\n",
+      "         An aftermarket has sprung up too, with delightfully innovative designs. Combined laser/LED headlights are readily available on Alibaba,\n",
+      "         \n",
+      "          designed as a drop in replacement for projector lamps on existing vehicles.\n",
+      "         \n",
+      "         These often use an LED low-beam, and a combined LED/laser high beam, where the laser diode shoots directly at the LED phosphor to excite it further, rather than using its own. These units often also come with fan cooling to keep the laser and LEDs below their maximum operational temperature. Such developments are exciting, though it’s important to be wary of the performance of unknown aftermarket headlights.\n",
+      "         \n",
+      "          Many aftermarket LED headlight “upgrades” fail to pass muster\n",
+      "         \n",
+      "         when it comes to real-world performance, and there’s no reason to believe hybrid LED/laser designs will be any different. We’d love to pass a selection of these parts through\n",
+      "         \n",
+      "          a full IIHS test protocol\n",
+      "         \n",
+      "         , but that’s sadly beyond the scope (and budget!) of this article.\n",
+      "        \n",
+      "\n",
+      "         However, [mikeselectricstuff] has happened to lay his hands on both the BMW and aftermarket parts,\n",
+      "         \n",
+      "          tearing them all down in his workshop to see what makes them tick.\n",
+      "         \n",
+      "         The differences are multitude when laid bare on the bench. The AliExpress part is relatively simple, wired up no differently from a regular headlight. Interestingly, however, the laser high-beam circuit runs all the time in these parts. To prevent blinding other road users, a shutter is kept in place to block the light, which is moved out of the way with a solenoid when the driver turns on the high beam switch.\n",
+      "        \n",
+      "\n",
+      "         Where the aftermarket part is a little out of left field, the BMW design is another thing entirely. The cutting-edge headlights are hooked up with multiple connectors and over 30 conductors, with much of the driver electronics living in an external controller. Much of this is to drive the various LEDs and stepper motors for slewing the headlights when steering. However, the laser assembly brings its own complexities. Twin light sensors are built inside to monitor the laser beam, and a special metal blocking arm sits directly in front of the diode, presumably to stop the laser light leaving the headlight in the event the phosphor coating burns through. It’s truly wild to get a look inside a modern luxury car’s headlight and see just how far we’ve come from the old days of simple sealed beams.\n",
+      "        \n",
+      "\n",
+      "         Cost Versus Performance\n",
+      "        \n",
+      "\n",
+      "         Despite the efficiency gains available, the technology remains expensive. Powerful laser diodes don’t come cheap, after all. However, as the technology trickles down to lower-end models, it’s likely that we could see economies of scale change that for the better. Indeed, if national authorities begin to demand higher performance headlights as standard, we could see laser headlights become the norm, rather than an expensive luxury. The technology could naturally be applied to home and commercial lighting, too — though we suspect the potential gains are limited enough that LED lighting will remain the norm for some time to come.\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "          The high light output of laser headlights in a compact package allows engineers greater freedom when designing the front-end of a car.\n",
+      "         \n",
+      "\n",
+      "\n",
+      "         As it currently stands, much of the appeal of the new technology is about the packaging benefits, which allow automotive designers greater freedom around the headlight area. Such concerns are less of a factor when it comes to light fittings in the home or office, or indeed, on lower-end automobiles. Regardless, it’s an exciting new application for lasers and one we’ll be sure to see more of in the future.\n",
+      "        \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "         Posted in\n",
+      "         \n",
+      "          car hacks\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          Engineering\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          Featured\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          Laser Hacks\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          Slider\n",
+      "         \n",
+      "\n",
+      "\n",
+      "         Tagged\n",
+      "         \n",
+      "          laser\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          laser headlight\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          laser headlights\n",
+      "         \n",
+      "         ,\n",
+      "         \n",
+      "          light\n",
+      "         \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# read in HTML content form pkl file\n",
+    "with open('article_content.pkl', 'rb') as f:\n",
+    "    article_content = pickle.load(f)\n",
+    "\n",
+    "# find article text \n",
+    "article_content = soup.find('article')\n",
+    "\n",
+    "# print article text \n",
+    "print(article_content.get_text())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
