--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -333,7 +333,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Question 3"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -344,9 +346,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Most Frequent Tokens:\n",
+      "Token: 'laser', Frequency: 35\n",
+      "Token: 'headlights', Frequency: 19\n",
+      "Token: 'headlight', Frequency: 11\n",
+      "Token: 'technology', Frequency: 10\n",
+      "Token: 'led', Frequency: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# load article text into trained spacy pipline\n",
+    "nlp = spacy.load('en_core_web_sm')\n",
+    "doc = nlp(article_content.get_text())\n",
+    "\n",
+    "# determine 5 most frequent tokens, converted to lower case, remove punct, stopwords, whitespace\n",
+    "def important(token):\n",
+    "    return not (token.is_space or token.is_punct or token.is_stop)\n",
+    "\n",
+    "interesting_tokens = [token for token in doc if important(token)]\n",
+    "word_freq = Counter(map(lambda token: str(token).lower(), interesting_tokens))\n",
+    "mostFreqtokens = word_freq.most_common(5)\n",
+    "\n",
+    "# print common tokens and frequencies with appropriate label\n",
+    "print(\"Top 5 Most Frequent Tokens:\")\n",
+    "for token, freq in mostFreqtokens:\n",
+    "    print(f\"Token: '{token}', Frequency: {freq}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
