--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -354,37 +354,55 @@
      "output_type": "stream",
      "text": [
       "Top 5 Most Frequent Tokens:\n",
-      "Token: 'laser', Frequency: 35\n",
-      "Token: 'headlights', Frequency: 19\n",
-      "Token: 'headlight', Frequency: 11\n",
-      "Token: 'technology', Frequency: 10\n",
-      "Token: 'led', Frequency: 10\n"
+      "Token: 'hacks', Frequency: 76\n",
+      "Token: 'light', Frequency: 68\n",
+      "Token: 'laser', Frequency: 63\n",
+      "Token: 'headlights', Frequency: 56\n",
+      "Token: 'led', Frequency: 41\n"
      ]
     }
    ],
    "source": [
-    "# load article text into trained spacy pipline\n",
-    "nlp = spacy.load('en_core_web_sm')\n",
-    "doc = nlp(article_content.get_text())\n",
+    "# Load the spaCy model\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
     "\n",
-    "# determine 5 most frequent tokens, converted to lower case, remove punct, stopwords, whitespace\n",
-    "def important(token):\n",
-    "    return not (token.is_space or token.is_punct or token.is_stop)\n",
+    "# Process the article text with the spaCy pipeline\n",
+    "doc = nlp(article_text)\n",
     "\n",
-    "interesting_tokens = [token for token in doc if important(token)]\n",
+    "#Identify custom_stopwords\n",
+    "custom_stopwords = {'comment', 'reply', 'march', '2021', 'hack', 'say', 'says', 'report'}\n",
+    "\n",
+    "# Define the tokens we care about\n",
+    "def we_care_about(token):\n",
+    "    return not (\n",
+    "        token.is_space or \n",
+    "        token.is_punct or \n",
+    "        token.is_stop or \n",
+    "        token.text.lower() in custom_stopwords or \n",
+    "        token.like_num  # Exclude numbers\n",
+    "    )\n",
+    "\n",
+    "# Get the interesting tokens (filtered tokens)\n",
+    "interesting_tokens = [token for token in doc if we_care_about(token)]\n",
+    "\n",
+    "# Create a frequency count of the interesting tokens (converted to lowercase)\n",
     "word_freq = Counter(map(lambda token: str(token).lower(), interesting_tokens))\n",
+    "\n",
+    "# Get the 5 most common tokens\n",
     "mostFreqtokens = word_freq.most_common(5)\n",
     "\n",
-    "# print common tokens and frequencies with appropriate label\n",
+    "# Print the common tokens and their frequencies\n",
     "print(\"Top 5 Most Frequent Tokens:\")\n",
     "for token, freq in mostFreqtokens:\n",
-    "    print(f\"Token: '{token}', Frequency: {freq}\")\n"
+    "    print(f\"Token: '{token}', Frequency: {freq}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Question 4"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,10 +413,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Top 5 Most Frequent Lemmas:\n",
+      "Lemma: 'light', Frequency: 99\n",
+      "Lemma: 'headlight', Frequency: 73\n",
+      "Lemma: 'laser', Frequency: 72\n",
+      "Lemma: 'car', Frequency: 63\n",
+      "Lemma: 'beam', Frequency: 53\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract the lemmas (base forms) of the interesting tokens\n",
+    "lemmas = [token.lemma_.lower() for token in interesting_tokens]\n",
+    "\n",
+    "# Create a frequency count of the lemmas\n",
+    "lemma_freq = Counter(lemmas)\n",
+    "\n",
+    "# Get the 5 most common lemmas\n",
+    "most_common_lemmas = lemma_freq.most_common(5)\n",
+    "\n",
+    "# Print the common lemmas and their frequencies\n",
+    "print(\"Top 5 Most Frequent Lemmas:\")\n",
+    "for lemma, freq in most_common_lemmas:\n",
+    "    print(f\"Lemma: '{lemma}', Frequency: {freq}\")"
+   ]
   },
   {
    "cell_type": "markdown",
