--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -449,6 +449,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Question 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "5. Define the following methods:\n",
     "    * `score_sentence_by_token(sentence, interesting_token)` that takes a sentence and a list of interesting token and returns the number of times that any of the interesting words appear in the sentence divided by the number of words in the sentence\n",
     "    * `score_sentence_by_lemma(sentence, interesting_lemmas)` that takes a sentence and a list of interesting lemmas and returns the number of times that any of the interesting lemmas appear in the sentence divided by the number of words in the sentence\n",
@@ -458,10 +465,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 :   How Laser Headlights Work | Hackaday    Skip to content     Hackaday      Primary Menu       Home         Blog         Hackaday.io         Tindie         Hackaday Prize         Submit         About          Search for:         March 27, 2021        How Laser Headlights Work         130 Comments          by:           Lewin Day           March 22, 2021          When we think about the onward march of automotive technology, headlights aren’t usually the first thing that come to mind.\n",
+      "Token Score for the first sentence: 0.060240963855421686\n",
+      "Lemma Score for the first sentence: 0.012048192771084338\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Store frequent tokens and lemmas in a set\n",
+    "cool_tokens = set()\n",
+    "for token, freq in mostFreqtokens:\n",
+    "    cool_tokens.add(token)\n",
+    "\n",
+    "cool_lemmas = set()\n",
+    "for lemma, freq in most_common_lemmas:\n",
+    "    cool_lemmas.add(lemma)\n",
+    "\n",
+    "# Get the first sentence in the document\n",
+    "first_sentence = list(doc.sents)[0]\n",
+    "count = 0\n",
+    "for token in first_sentence:\n",
+    "    if token.text.lower() in cool_tokens:\n",
+    "        count += 1\n",
+    "\n",
+    "# Remove tehe junk newlines and replace with nothing\n",
+    "sent_str = str(first_sentence).replace('\\n', '').replace('  ', ' ')\n",
+    "\n",
+    "# Print the count and the sentence text\n",
+    "print(count, \":\", sent_str)\n",
+    "\n",
+    "# Define score_sentence_by_token function\n",
+    "def score_sentence_by_token(sentence, interesting_tokens):\n",
+    "    # Extract the raw text of the sentence\n",
+    "    sentence_text = sentence.text\n",
+    "    # Tokenize the sentence\n",
+    "    doc = nlp(sentence_text)\n",
+    "    # Count how many interesting tokens appear in the sentence\n",
+    "    token_count = sum(1 for token in doc if token.text.lower() in interesting_tokens)\n",
+    "    # Return the ratio of interesting tokens to total tokens\n",
+    "    tokens_score = token_count / len(doc)\n",
+    "    return tokens_score\n",
+    "\n",
+    "# Define score_sentence_by_lemma function\n",
+    "def score_sentence_by_lemma(sentence, interesting_lemmas):\n",
+    "    # Extract the raw text of the sentence\n",
+    "    sentence_text = sentence.text\n",
+    "    # Tokenize the sentence\n",
+    "    doc = nlp(sentence_text)\n",
+    "    # Count how many interesting lemmas appear in the sentence\n",
+    "    lemma_count = sum(1 for token in doc if token.lemma_ in interesting_lemmas)\n",
+    "    # Return the ratio of interesting lemmas to total tokens\n",
+    "    lemmas_score = lemma_count / len(doc)\n",
+    "    return lemmas_score\n",
+    "\n",
+    "# Calculate scores for the first sentence\n",
+    "token_score = score_sentence_by_token(first_sentence, cool_tokens)\n",
+    "lemma_score = score_sentence_by_lemma(first_sentence, cool_lemmas)\n",
+    "\n",
+    "# Print the scores\n",
+    "print(f\"Token Score for the first sentence: {token_score}\")\n",
+    "print(f\"Lemma Score for the first sentence: {lemma_score}\")"
+   ]
   },
   {
    "cell_type": "markdown",
