--- a/web-scraping.ipynb
+++ b/web-scraping.ipynb
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "8. Which tokens and lexems would be ommitted from the lists generated in questions 3 and 4 if we only wanted to consider nouns as interesting words?  How might we change the code to only consider nouns? Put your answer in this Markdown cell (you can edit it by double clicking it)."
+    "### Question 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "8. Which tokens and lexems would be omitted from the lists generated in questions 3 and 4 if we only wanted to consider nouns as interesting words?  How might we change the code to only consider nouns? Put your answer in this Markdown cell (you can edit it by double clicking it).\n",
+    "\n",
+    "In reviewing the lists from questions 3 and question 4, I am not sure that any of the words would be eliminated.  The word that is questionable is \"led\". This could be a verb (led), an adjective (ex: LED light), and a noun if used as LED to refer to the light type.\n",
+    "\n",
+    "Original Code:\n",
+    "def we_care_about(token):\n",
+    "    return not (\n",
+    "        token.is_space or\n",
+    "        token.is_punct or\n",
+    "        token.is_stop or \n",
+    "        token.text.lower() in custom_stopwords or \n",
+    "        token.like_num\n",
+    "\n",
+    "\n",
+    "New Code:\n",
+    "def we_care_about(token):\n",
+    "    return not (\n",
+    "        token.is_space or \n",
+    "        token.is_punct or \n",
+    "        token.is_stop or \n",
+    "        token.text.lower() in custom_stopwords or \n",
+    "        token.like_num\n",
+    "        token.pos_ == \"NOUN\"\n"
    ]
   }
  ],
